Bug 218812 - Detection of changed document does not work properly
Summary: Detection of changed document does not work properly
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-15 17:10 UTC by Grégoire Verlut
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grégoire Verlut 2009-12-15 17:10:06 UTC
Version:           2.0.0_devel (using unspecified)
Compiler:          mingw, provided with QT Creator 
OS:                Windows 32-Bit

-open a kst file
-do absolutely nothing !
-close kst, a pop-up appears with "Your document has been modified Save changes?" even if the user did not do anything
Comment 1 Netterfield 2010-01-04 23:51:23 UTC
SVN commit 1070123 by netterfield:

BUG: 218812

A couple minor bug fixes:
  -fix changed document detection 
  -Fix 'wait' icon



 M  +0 -13     devel-docs/Kst2Specs/Bugs  
 M  +5 -0      devel-docs/Kst2Specs/FixedBugs  
 M  +1 -1      src/libkstapp/application.cpp  
 M  +1 -1      src/libkstapp/applicationsettings.cpp  
 M  +1 -1      src/libkstapp/datawizard.cpp  
 M  +1 -0      src/libkstapp/document.cpp  
 M  +2 -1      src/libkstapp/mainwindow.cpp  
 M  +1 -1      src/libkstapp/view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070123
Comment 2 Peter Kümmel 2010-08-14 12:14:32 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 3 Peter Kümmel 2010-11-12 10:42:18 UTC
These bugs are solved with 2.0.0