BUG: 218812

A couple minor bug fixes:
  -fix changed document detection 
  -Fix 'wait' icon



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1070123 283d02a7-25f6-0310-bc7c-ecb5cbfe19da